# sea-orm-mysql-axum1

./: .env  Cargo.toml
entity/: Cargo.toml
entity/src/: lib.rs  post.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: flash.rs  main.rs
static/css/: skeleton.css  style.css
templates/: edit.html.tera  index.html.tera  layout.html.tera  new.html.tera
