[package]
name = "sea-orm-mysql-axum1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "entity", "migration"]

[dependencies]
anyhow = "1.0.57"
axum = "0.5.7"
dotenv = "0.15.0"
serde = "1.0.137"
serde_json = "1.0.81"
tokio = { version = "1.19.2", features = ["full"] }
tower = "0.4.12"
tower-cookies = "0.6.0"
tower-http = { version = "0.3.4", features = ["fs"] }
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
entity = { path = "entity" }
migration = { path = "migration" }
tera = "1.15.0"

[dependencies.sea-orm]
#path = "../../"
version = "^0.8.0"
features = ["sqlx-mysql", "runtime-tokio-native-tls"]
